--- a/src/platforms/android/include.gradle
+++ b/src/platforms/android/include.gradle
@@ -1,7 +1,7 @@
 android {
   productFlavors {
-    "@cn/nativescript-google-analytics" {
-      dimension "@cn/nativescript-google-analytics"
+    "nativescript-google-analytics" {
+      dimension "nativescript-google-analytics"
     }
   }
 }
